<resources>
    <string name="app_name">eventMaster</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="regitser">Regitser</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="login_caps">LOGIN</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="please_enter_your_details">Please Enter Your Details</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="logo">Logo</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="logout">Logout</string>
    <string name="admin">ADMIN</string>
    <string name="artist_name">Artist Name:</string>
    <string name="submit">SUBMIT</string>
    <string name="event_date">Event Date:</string>
    <string name="add_upcoming_events">Add Upcoming events</string>
    <string name="events">Events</string>
</resources>
