<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:background="@color/backgroundcolor">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logo" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:background="@drawable/bgmenu"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tile"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_account" />

            <TextView
                android:id="@+id/textview_profile"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:fontFamily="@font/architects_daughter"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/profile"
                android:textColor="@color/lightgray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="10dp" />

        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/tile"
            android:orientation="vertical"
            android:padding="15dp">

                <ImageView
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_search"
                    android:contentDescription="@string/search" />

            <TextView
                android:id="@+id/textview_search"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:fontFamily="@font/architects_daughter"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/search"
                android:textColor="@color/lightgray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/tile"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_events"
                    android:contentDescription="@string/search" />

                <TextView
                    android:id="@+id/textview_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/architects_daughter"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/upcoming_events"
                    android:textColor="@color/lightgray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/tile"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logout"
                    android:contentDescription="@string/search" />

                <TextView
                    android:id="@+id/textview_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/architects_daughter"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/logout"
                    android:textColor="@color/lightgray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

</LinearLayout>